removed snapshot-card css - overriding height caused alignment issues with flex, and cleaned up other small bits

--- a/client/app/main/material.css
+++ b/client/app/main/material.css
@@ -627,9 +627,6 @@ md-sidenav md-divider {
   border-top-color: #385383;
 }
 
-.snapshot-card {
-  height: 100%;
-}
 /* pre { */
 /*   text-space-collapse: trim-inner; */
 /* } */
